--- a/.github/workflows/build-Homelede.yml
+++ b/.github/workflows/build-Homelede.yml
@@ -77,7 +77,7 @@ jobs:
 
     - name: Load custom configuration ⑤导入自定义配置项,.config
       run: |
-        [ -f $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        [ -e $CONFIG_FILE ] && cp $CONFIG_FILE openwrt/.config
         
     - name: Update/Install feeds by Homelede ⑥更新/安装自定义插件-来自Homelede定义命令
       run: cd openwrt && ./prepareCompile.sh
