--- a/.github/workflows/build-Homelede.yml
+++ b/.github/workflows/build-Homelede.yml
@@ -12,8 +12,8 @@ name: Build Homelede
 
 on:
   #repository_dispatch:
-  #schedule:
-    #- cron: 0 */6 * * *
+  schedule:
+   - cron: 0 */6 * * *
   workflow_dispatch:
     inputs:
       ssh:
@@ -77,7 +77,7 @@ jobs:
 
     - name: Load custom configuration ⑤导入自定义配置项,.config
       run: |
-        [ -e $CONFIG_FILE ] && cp $CONFIG_FILE openwrt/.config
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         
     - name: Update/Install feeds by Homelede ⑥更新/安装自定义插件-来自Homelede定义命令
       run: cd openwrt && ./prepareCompile.sh
