--- a/.github/workflows/build-Homelede.yml
+++ b/.github/workflows/build-Homelede.yml
@@ -192,3 +192,11 @@ jobs:
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Webchat inform (20) 微信通知
+      uses: emon100/Action-Serverchan@v2
+      if: steps.tag.outputs.status == 'success' && !cancelled()
+      with:
+        SCKEY: ${{ secrets.SCKEY }}
+        text: 恭喜主人固件编译成功！
+        desp: 我亲爱的主人您Github Action自动编译的固件顺利编译完成了！
