--- a/.github/workflows/build-Homelede.yml
+++ b/.github/workflows/build-Homelede.yml
@@ -101,8 +101,16 @@ jobs:
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
+        
+    - name: Wechat ⑨微信通知
+      uses: emon100/Action-Serverchan@v2
+      if: steps.package.outputs.status == 'success'
+      with:
+        SCKEY: ${{ secrets.SCKEY }}
+        text: Github Action编译开始啦
+        desp: 要编译的固件正在开始编译,请耐心等待......地址：https://github.com/yuntian123456/BuildOpenwrt
 
-    - name: Compile the firmware ⑨开始编译
+    - name: Compile the firmware ⑩开始编译
       id: compile
       run: |
         cd openwrt
@@ -113,18 +121,18 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    - name: Check space usage ⑩空间占用检测
+    - name: Check space usage (11)空间占用检测
       if: (!cancelled())
       run: df -hT
 
-    - name: Upload bin directory (11) 上传Bin文件
+    - name: Upload bin directory (12) 上传Bin文件
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: openwrt/bin
 
-    - name: Organize files （12）编译结果整理
+    - name: Organize files （13）编译结果整理
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
@@ -133,14 +141,14 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
-    - name: Upload firmware directory （13）编译固件上传
+    - name: Upload firmware directory （14）编译固件上传
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
-    - name: Upload firmware to cowtransfer （14）编译固件上传奶牛快传
+    - name: Upload firmware to cowtransfer （15）编译固件上传奶牛快传
       id: cowtransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
       run: |
@@ -149,7 +157,7 @@ jobs:
         echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
         echo "::set-output name=url::$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
 
-    - name: Upload firmware to WeTransfer （15）编译固件上传WeTransfer
+    - name: Upload firmware to WeTransfer （16）编译固件上传WeTransfer
       id: wetransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
       run: |
@@ -158,7 +166,7 @@ jobs:
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
         echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
 
-    - name: Generate release tag （16）生成release标签
+    - name: Generate release tag （17）生成release标签
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
@@ -168,7 +176,7 @@ jobs:
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
 
-    - name: Upload firmware to release （17）上传到release
+    - name: Upload firmware to release （18）上传到release
       uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
@@ -178,13 +186,13 @@ jobs:
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
 
-    - name: Delete workflow runs （18）删除workflow runs
+    - name: Delete workflow runs （19）删除workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 1
         keep_minimum_runs: 3
 
-    - name: Remove old Releases （19）移除旧release
+    - name: Remove old Releases （20）移除旧release
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
@@ -193,10 +201,18 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Webchat inform (20) 微信通知
+    - name: Webchat inform (21) 微信通知
       uses: emon100/Action-Serverchan@v2
       if: steps.tag.outputs.status == 'success' && !cancelled()
       with:
         SCKEY: ${{ secrets.SCKEY }}
-        text: 恭喜主人固件编译成功！
-        desp: 我亲爱的主人您Github Action自动编译的固件顺利编译完成了！
+        text: 恭喜固件编译成功！
+        desp: 您Github Action自动编译的固件顺利编译完成了！地址：https://github.com/yuntian123456/BuildOpenwrt
+        
+    - name: Webchat inform (21) 微信通知
+      uses: emon100/Action-Serverchan@v2
+      if: steps.tag.outputs.status == 'failure' || cancelled()
+      with:
+        SCKEY: ${{ secrets.SCKEY }}
+        text: 固件编译失败！
+        desp: 您Github Action自动编译的固件编译失败！地址：https://github.com/yuntian123456/BuildOpenwrt
