--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: Github Action编译开始啦
-        desp: 要编译的固件正在开始编译,请耐心等待......\n 地址：${Github_url}
+        desp: 要编译的固件正在开始编译,请耐心等待......\n 地址：${{Github_url}}
 
     - name: Compile the firmware ⑩开始编译
       id: compile
@@ -150,7 +150,7 @@ jobs:
         
     - name: Webchat inform (21) 微信通知
       uses: emon100/Action-Serverchan@v2
-      if: steps.tag.outputs.status == 'success' && !cancelled()
+      if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: 恭喜Github Action固件编译成功！
@@ -158,7 +158,7 @@ jobs:
         
     - name: Webchat inform (21) 微信通知
       uses: emon100/Action-Serverchan@v2
-      if: steps.tag.outputs.status != 'success' || cancelled()
+      if: steps.organize.outputs.status != 'success' || cancelled()
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: Github Action固件编译失败！
