--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,7 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: Github Action编译开始啦
-        desp: 要编译的固件正在开始编译,请耐心等待......\\n 地址：${{ env.Github_url }}
+        desp: 要编译的固件正在开始编译,请耐心等待......\n 地址：${{ env.Github_url }}
 
     - name: Compile the firmware ⑩开始编译
       id: compile
@@ -154,7 +154,7 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: 恭喜Github Action固件编译成功！
-        desp: 您Github Action自动编译的固件顺利编译完成了！\\n 地址：${{ env.Github_url }}
+        desp: 您Github Action自动编译的固件顺利编译完成了！\n 地址：${{ env.Github_url }}
         
     - name: Webchat inform (21) 微信通知
       uses: emon100/Action-Serverchan@v2
@@ -162,4 +162,4 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: Github Action固件编译失败！
-        desp: 您Github Action自动编译的固件编译失败！\\n 地址：${{ env.Github_url }}
+        desp: 您Github Action自动编译的固件编译失败！\n 地址：${{ env.Github_url }}
