--- a/.github/workflows/build-Homelede.yml
+++ b/.github/workflows/build-Homelede.yml
@@ -176,6 +176,7 @@ jobs:
         touch release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
+        echo "::set-output name=status::success"
 
     - name: Upload firmware to release （18）上传到release
       uses: softprops/action-gh-release@v1
@@ -208,7 +209,7 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: 恭喜Github Action固件编译成功！
-        desp: 您Github Action自动编译的固件顺利编译完成了！ O(∩_∩)O 查看：${{ env.Github_url }}
+        desp: 您Github Action自动编译的固件顺利编译完成了！固件列表：${{ steps.tag.outputs.release_tag }} O(∩_∩)O 查看：${{ env.Github_url }}
         
     - name: Webchat inform (21) 微信通知
       uses: emon100/Action-Serverchan@v2
