--- a/.github/workflows/build-Homelede.yml
+++ b/.github/workflows/build-Homelede.yml
@@ -110,11 +110,14 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: Github Action编译开始啦
-        desp: 您要编译的固件正在开始编译,请耐心等待......O(∩_∩)O 查看：${{ env.Github_url }}
+        desp: 
+             🎈您要编译的固件正在开始编译,请耐心等待......
+             O(∩_∩)O 查看：${{ env.Github_url }}
 
     - name: Compile the firmware ⑩开始编译
       id: compile
       run: |
+        echo "::set-output name=Start_time::$(date +"%Y.%m.%d-%H:%M:%S")"
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
@@ -122,6 +125,7 @@ jobs:
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "::set-output name=End_time::$(date +"%Y.%m.%d-%H:%M:%S")"
 
     - name: Check space usage (11)空间占用检测
       if: (!cancelled())
@@ -209,7 +213,13 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: 恭喜Github Action固件编译成功！
-        desp: 您Github Action自动编译的固件顺利编译完成了！固件列表：${{ steps.tag.outputs.release_tag }} O(∩_∩)O 查看：${{ env.Github_url }}
+        desp: 
+             🎈您Github Action自动编译的固件顺利编译完成了！
+             😄开始Compile时间：${{ steps.compile.outputs.Start_time }} 
+             😊结束Compile时间：${{ steps.compile.outputs.End_time }} 
+             O(∩_∩)O 查看结果：${{ env.Github_url }}
+             O(∩_∩)O 原始仓库：${{ env.REPO_URL }}
+             
         
     - name: Webchat inform (21) 微信通知
       uses: emon100/Action-Serverchan@v2
@@ -217,4 +227,6 @@ jobs:
       with:
         SCKEY: ${{ secrets.SCKEY }}
         text: Github Action固件编译失败！
-        desp: 您Github Action自动编译的固件编译失败！ o(╥﹏╥)o 查看：${{ env.Github_url }}
+        desp: 
+             😂您Github Action自动编译的固件编译失败！ 
+             o(╥﹏╥)o 查看：${{ env.Github_url }}
