--- a/.github/workflows/build-Homelede_test.yml
+++ b/.github/workflows/build-Homelede_test.yml
@@ -49,10 +49,6 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
@@ -86,12 +82,8 @@ jobs:
       id: package
       run: |
         cd openwrt
-        make defconfig
-        make download -j8
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
         echo "::set-output name=status::success"
-        echo "::set-output name=version::$(cat ./package/base-files/files/etc/banner)"
+        #echo "::set-output name=version::$(cat ./package/base-files/files/etc/banner)"
         
 
     - name: Compile the firmware ⑩开始编译
@@ -157,7 +149,8 @@ jobs:
       run: |
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "${{ steps.package.outputs.version }}" >> release.txt
+        cat /openwrt/package/base-files/files/etc/banner >> release.txt
+        #echo "${{ steps.package.outputs.version }}" >> release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
