--- a/.github/workflows/build-Homelede_test.yml
+++ b/.github/workflows/build-Homelede_test.yml
@@ -148,6 +148,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         cat openwrt/package/base-files/files/etc/banner | head -n 8 | tail -n +8 >> release.txt
+        echo "🌏🌏 [🌏](${{ env.REPO_URL }})" >> release.txt
         #echo "${{ steps.package.outputs.version }}" >> release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
